<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardElevation="0dp"
            android:layout_margin="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivCranberry"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/dry_cranberry" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cranberry"
                    android:gravity="center|bottom"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardElevation="0dp"
            android:layout_margin="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivBerry"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/berry_burlesque" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/berry_burlesque"
                    android:gravity="center|bottom"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardElevation="0dp"
            android:layout_margin="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivCitrus"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/citrus_fizz" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/citrus_fizz"
                    android:gravity="center|bottom"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardElevation="0dp"
            android:layout_margin="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivLemonade"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/lavender_lemonade" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lavender_lemonade"
                    android:gravity="center|bottom"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardElevation="0dp"
            android:layout_margin="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivShirley"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/shirley_ginger" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/shirley_ginger"
                    android:gravity="center|bottom"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardElevation="0dp"
            android:layout_margin="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivVintage"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/vintage_point" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/vintage_point"
                    android:gravity="center|bottom"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>